--- a/.gitignore
+++ b/.gitignore
@@ -128,9 +128,6 @@ ENV/
 env.bak/
 venv.bak/
 
-# Ignore Python virtual environment
-.venv
-
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -161,3 +158,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Replit
+.replit
+replit.nix
+.db  # ignore SQLite dbs
