--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,15 @@
 [tool.poetry]
-name = "replit-flask-app"
+name = "campus-suite"
 version = "0.1.0"
-description = "A Flask application"
-authors = ["Your Name <your.email@example.com>"]
+description = ""
+authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-flask = "^2.0"
+python = ">=3.11.0,<3.12"
+flask = "^3.0.0"
+gunicorn = "^21.2.0"
+bcrypt = "4.2.1"
+psycopg2-binary = "2.9.10"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
