--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,6 @@
 			]
 		}
 	},
-	"postCreateCommand": "./.devcontainer/post-create.sh",
+	"postCreateCommand": "chmod +x .devcontainer/post-create.sh && .devcontainer/post-create.sh",
 	"remoteUser": "vscode"
 }
