Squashed commit of the following:
commit 10b1c3381f920e2cdf31464a10d80119847b588b
Merge: 48f3e7b 4485c03
Author: JS Ng <ngjunsiang@gmail.com>
Date:   Wed Apr 9 00:18:39 2025 +0000

    Merge branch 'main' of https://github.com/nyjc-computing/campus

commit 4485c031dfb4263476d4271e126f194acaa02408
Author: nyjc.computing <164971954+nycomp@users.noreply.github.com>
Date:   Wed Apr 9 08:18:24 2025 +0800

    [typo] fix indent

commit 48f3e7b47102acc9055fcc820512dce6c3a56365
Author: JS Ng <ngjunsiang@gmail.com>
Date:   Wed Apr 9 00:17:48 2025 +0000

    [dev] postCreateCommand use bash for script execution and post-create script install poetry-shell plugin

commit b5d9dbd3cd0105e055d56ec4330be1404ea983bf
Author: nyjc.computing <164971954+nycomp@users.noreply.github.com>
Date:   Tue Apr 8 20:33:23 2025 +0800

    Update devcontainer.json to set appropriate permissions for post-create script

commit 13675f506e38cad13c731f0a42caa8bb2e29d627
Author: nyjc.computing <164971954+nycomp@users.noreply.github.com>
Date:   Tue Apr 8 20:28:16 2025 +0800

    Update devcontainer.json to use python 3.11

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "Python DevContainer",
-	"image": "mcr.microsoft.com/devcontainers/python:3.9",
+	"image": "mcr.microsoft.com/devcontainers/python:3.11",
 	"customizations": {
 		"vscode": {
 			"settings": {
@@ -12,6 +12,6 @@
 			]
 		}
 	},
-	"postCreateCommand": "./.devcontainer/post-create.sh",
+	"postCreateCommand": "bash .devcontainer/post-create.sh",
 	"remoteUser": "vscode"
 }
