--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "campus-suite"
 version = "0.1.0"
 description = ""
 authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.11.0,<3.12"
