--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ gunicorn = "^21.2.0"
 bcrypt = "4.2.1"
 psycopg2-binary = "2.9.10"
 pymongo = {extras = ["srv"], version = "^4.13.0"}
+requests = "^2.32.4"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
