--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -18,6 +18,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install poetry
       - name: Install dependencies
-        run: poetry install --no-root
+        run: poetry install
       - name: Run tests
         run: poetry run python run_tests.py
