--- a/campus/models/pyproject.toml
+++ b/campus/models/pyproject.toml
@@ -1,9 +1,11 @@
 [tool.poetry]
 name = "campus-models"
 version = "0.1.0"
-description = "Data models and schemas for Campus"
+description = "Data models and schemas"
 authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
-packages = [{include = "campus"}]
+packages = [
+    {include = "campus/models", from = "../.."},
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
