--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
-# This is a deployment-ready pyproject.toml that works with older Poetry versions
-# It treats the entire workspace as a single package rather than using package-mode = false
+# Campus Service - Unified Deployment
+# This configuration supports both vault and apps deployments
+# Deployment mode determined by 'deploy' file content
 
 [tool.poetry]
-name = "campus"
+name = "campus-service"
 version = "0.1.0"
-description = "Campus ecosystem - modular platform for educational technology"
+description = "Campus - Unified educational technology platform"
 authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
 readme = "README.md"
 packages = [{include = "campus"}]
@@ -12,21 +13,12 @@ packages = [{include = "campus"}]
 [tool.poetry.dependencies]
 python = ">=3.11.0,<3.12"
 
-# All dependencies from subpackages consolidated
-# Common dependencies
+# All dependencies bundled for simplicity
 flask = "^3.0.0"
 bcrypt = "^4.2.1"
-
-# Vault dependencies  
 psycopg2-binary = "^2.9.0"
-
-# Storage dependencies
 pymongo = {extras = ["srv"], version = "^4.8.0"}
-
-# Client dependencies
 requests = "^2.32.4"
-
-# Apps dependencies (web server)
 gunicorn = "^21.2.0"
 werkzeug = "^3.0.0"
 
@@ -34,7 +26,7 @@ werkzeug = "^3.0.0"
 pylint = "^3.0"
 
 [tool.poetry.scripts]
-campus-server = "campus.apps.factory:create_app"
+campus = "main:main"
 
 [tool.pyright]
 useLibraryCodeForTypes = true
