--- a/campus/workspace/pyproject.toml
+++ b/campus/workspace/pyproject.toml
@@ -4,28 +4,20 @@ version = "0.1.0"
 description = "Campus ecosystem meta-package - complete Campus system for deployment"
 authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
 readme = "README.md"
-packages = [{include = "campus"}]
+packages = [
+    {include = "campus/workspace", from = "../.."}
+]
 
 [tool.poetry.dependencies]
 python = ">=3.11.0,<3.12"
 
-# All the dependencies from individual packages
-# Common dependencies
-flask = "^3.0.0"
-bcrypt = "^4.2.1"
-
-# Vault dependencies  
-psycopg2-binary = "^2.9.0"
-
-# Storage dependencies
-pymongo = {extras = ["srv"], version = "^4.8.0"}
-
-# Client dependencies
-requests = "^2.32.4"
-
-# Apps dependencies (web server)
-gunicorn = "^21.2.0"
-werkzeug = "^3.0.0"
+# Include all campus packages as dependencies
+campus-common = {path = "../common", develop = true}
+campus-vault = {path = "../vault", develop = true}
+campus-storage = {path = "../storage", develop = true}
+campus-client = {path = "../client", develop = true}
+campus-models = {path = "../models", develop = true}
+campus-apps = {path = "../apps", develop = true}
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.0"
