dev: restrict package testing workflow to main branch only
This prevents workflows being triggered twice when a push is made to a branch with an open PR targetting main

--- a/.github/workflows/package-testing.yml
+++ b/.github/workflows/package-testing.yml
@@ -55,9 +55,9 @@ name: Package Testing
 
 on:
   push:
-    branches: [main, campus-subpackaging]
+    branches: [main]  # Only run on main branch pushes
   pull_request:
-    branches: [main]
+    branches: [main]  # Run on PRs targeting main
 
 jobs:
   # First, test that packages can be built in dependency order
