--- a/campus/apps/pyproject.toml
+++ b/campus/apps/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "campus-apps"
+name = "campus-suite-apps"
 version = "0.1.0"
 description = "Web applications and services"
 authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
