--- a/campus/vault/pyproject.toml
+++ b/campus/vault/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "campus-vault"
+name = "campus-suite-vault"
 version = "0.1.0"
 description = "Secure vault service for managing secrets"
 authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
