--- a/.github/workflows/sync-branches.yml
+++ b/.github/workflows/sync-branches.yml
@@ -1,4 +1,3 @@
----
 name: Auto-Sync Downstream Branches
 
 on:
@@ -7,7 +6,7 @@ on:
   pull_request:
     types: [closed]
     branches: [main, staging]  # Trigger when PRs are merged
-  workflow_dispatch: true  # Allow manual triggering
+  workflow_dispatch:  # Allow manual triggering
 
 permissions:
   contents: write
