--- a/.github/workflows/sync-branches.yml
+++ b/.github/workflows/sync-branches.yml
@@ -8,6 +8,7 @@ on:
     branches: [main, staging]  # Trigger when PRs are merged
   workflow_dispatch:  # Allow manual triggering
 
+# Auto-sync workflow to keep downstream branches up to date
 permissions:
   contents: write
 
