--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,13 @@ python = ">=3.11.0,<3.12"
 # Client library dependencies (minimal for HTTP requests)
 requests = "^2.32.4"
 
-# Deployment orchestration dependencies (all services)
-flask = {version = "^3.0.0", optional = true}
-bcrypt = {version = "^4.2.1", optional = true}
-psycopg2-binary = {version = "^2.9.0", optional = true}
-pymongo = {extras = ["srv"], version = "^4.13.2", optional = true}
-gunicorn = {version = "^21.2.0", optional = true}
-werkzeug = {version = "^3.0.0", optional = true}
+# Deployment orchestration dependencies (all services) - required for deployment
+flask = "^3.0.0"
+bcrypt = "^4.2.1"
+psycopg2-binary = "^2.9.0"
+pymongo = {extras = ["srv"], version = "^4.13.2"}
+gunicorn = "^21.2.0"
+werkzeug = "^3.0.0"
 
 [tool.poetry.extras]
 # Optional dependency groups for deployment modes
