Squashed commit of the following:
commit ae4a666d69a7301b8b9974139ac8f531d1a6a2fd
Merge: 6e86579 adeaf37
Author: JS Ng <ngjunsiang@gmail.com>
Date:   Tue Jul 22 09:46:37 2025 +0800

    Merge pull request #122 from nyjc-computing/railway-deployment

    Use DEPLOY variable instead of deploy file

commit adeaf37e2444980ffc2d1e012338da6ec88440b0
Merge: fbd3cef 6e86579
Author: JS Ng <ngjunsiang@gmail.com>
Date:   Tue Jul 22 01:44:29 2025 +0000

    Merge branch 'main' into railway-deployment

commit fbd3cef99dd15c0900a87958ba4b9e7b5a711d41
Author: JS Ng <ngjunsiang@gmail.com>
Date:   Tue Jul 22 01:43:32 2025 +0000

    refactor: update deployment mode handling to use environment variable instead of file

commit 6e86579cf9a1ee925e170f9e66ee14ff7dba354e
Merge: ed9658f bc34552
Author: JS Ng <ngjunsiang@gmail.com>
Date:   Tue Jul 22 09:29:18 2025 +0800

    Merge pull request #121 from nyjc-computing/railway-deployment

    feat: wsgi entrypoint for deployment

commit bc34552d45d58ca31672833835c75ae176fe9f89
Author: JS Ng <ngjunsiang@gmail.com>
Date:   Tue Jul 22 01:28:29 2025 +0000

    feat: wsgi entrypoint for deployment

commit ed9658fb45d55a639c054d6eed38e73ec8d0b08b
Merge: 9cdd50b 5f0598d
Author: JS Ng <ngjunsiang@gmail.com>
Date:   Tue Jul 22 08:46:05 2025 +0800

    Merge pull request #120 from nyjc-computing/railway-deployment

    Fix Railway deployment

commit 5f0598de5a5c6b70d0076a78cd8aa8671a12393d
Author: JS Ng <ngjunsiang@gmail.com>
Date:   Tue Jul 22 00:42:04 2025 +0000

    Fix Railway deployment: make dependencies non-optional for proper installation

commit 9cdd50b8bf95f1e24d191cf6aa6477a9db03f675
Merge: 8dd2f3e c108eba
Author: JS Ng <ngjunsiang@gmail.com>
Date:   Tue Jul 22 01:07:51 2025 +0800

    Merge pull request #118 from nyjc-computing/staging

    Fix branch error when syncing branches

commit c108eba5a09b433330d3a54c286dc87643af2484
Merge: 3020edd 8dd2f3e
Author: JS Ng <ngjunsiang@gmail.com>
Date:   Mon Jul 21 17:07:02 2025 +0000

    Merge bran

--- a/campus/apps/pyproject.toml
+++ b/campus/apps/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "campus-apps"
+name = "campus-suite-apps"
 version = "0.1.0"
 description = "Web applications and services"
 authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
@@ -9,11 +9,11 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-campus-common = {path = "../common", develop = true}
-campus-vault = {path = "../vault", develop = true}
-campus-storage = {path = "../storage", develop = true}
-campus-client = {path = "../client", develop = true}
-campus-models = {path = "../models", develop = true}
+campus-suite-common = {path = "../common", develop = true}
+campus-suite-vault = {path = "../vault", develop = true}
+campus-suite-storage = {path = "../storage", develop = true}
+campus-suite-client = {path = "../client", develop = true}
+campus-suite-models = {path = "../models", develop = true}
 flask = "^3.0.0"
 gunicorn = "^21.2.0"
 requests = "^2.32.4"
