--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@
 # Deployment mode determined by 'deploy' file content
 
 [tool.poetry]
-name = "campus"
+name = "campus-suite"
 version = "0.1.0"
-description = "Campus deployment orchestrator and client library for vault and apps services"
+description = "Campus Suite - Complete education management platform deployment orchestrator and client library"
 authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
 readme = "README.md"
 packages = [{include = "campus"}]
@@ -16,13 +16,13 @@ python = ">=3.11.0,<3.12"
 # Client library dependencies (minimal for HTTP requests)
 requests = "^2.32.4"
 
-# Deployment orchestration dependencies (all services)
-flask = {version = "^3.0.0", optional = true}
-bcrypt = {version = "^4.2.1", optional = true}
-psycopg2-binary = {version = "^2.9.0", optional = true}
-pymongo = {extras = ["srv"], version = "^4.8.0", optional = true}
-gunicorn = {version = "^21.2.0", optional = true}
-werkzeug = {version = "^3.0.0", optional = true}
+# Deployment orchestration dependencies (all services) - required for deployment
+flask = "^3.0.0"
+bcrypt = "^4.2.1"
+psycopg2-binary = "^2.9.0"
+pymongo = {extras = ["srv"], version = "^4.13.2"}
+gunicorn = "^21.2.0"
+werkzeug = "^3.0.0"
 
 [tool.poetry.extras]
 # Optional dependency groups for deployment modes
