ci: update pull request branches to include staging for testing

--- a/.github/workflows/package-testing.yml
+++ b/.github/workflows/package-testing.yml
@@ -57,7 +57,7 @@ on:
   push:
     branches: [main]  # Only run on main branch pushes
   pull_request:
-    branches: [main]  # Run on PRs targeting main
+    branches: [main, staging]  # Run on PRs targeting main
 
 jobs:
   # First, test that packages can be built in dependency order
