fix: update package-testing workflow to set PYTHONPATH for campus namespace discovery

--- a/.github/workflows/package-testing.yml
+++ b/.github/workflows/package-testing.yml
@@ -280,9 +280,8 @@ jobs:
         run: |
           cd campus/${{ matrix.package }}
           poetry install
-          cd ../..  # Move to project root so campus namespace is discoverable
           echo "🧪 Testing isolated import of campus.${{ matrix.package }}..."
-          poetry run python -c "
+          PYTHONPATH=$(realpath ../..) poetry run python -c "
           import sys
           try:
               import campus.${{ matrix.package }}
