fix: add missing packages section in pyproject.toml for proper configuration

--- a/campus/workspace/pyproject.toml
+++ b/campus/workspace/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Campus ecosystem meta-package - complete Campus system for deployment"
 authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
 readme = "README.md"
+packages = [
     {include = "campus/workspace", from = "../.."}
 ]
 
